--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
   <div class="masthead-content">
     <div class="container">
       <h1 class="masthead__title">
-        Your Favorite One Page Multi Purpose Template
+        Your Favorite One Page 
+        Multi Purpose Template
       </h1>
       <h2 class="masthead__subtitle">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
