--- a/#source/masthead.html
+++ b/#source/masthead.html
@@ -13,10 +13,10 @@
           <!-- Desktopnav -->
           <ul class="navigation__menu">
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link"> Features</a>
+              <a href="#features" class="navigation__menu-link"> Features</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link">Works</a>
+              <a href="#works" class="navigation__menu-link">Works</a>
             </li>
             <li class="navigation__menu-item">
               <a href="#" class="navigation__menu-link">Our team</a>
