--- a/#source/masthead.html
+++ b/#source/masthead.html
@@ -19,7 +19,7 @@
               <a href="#works" class="navigation__menu-link">Works</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link">Our team</a>
+              <a href="#team" class="navigation__menu-link">Our team</a>
             </li>
             <li class="navigation__menu-item">
               <a href="#" class="navigation__menu-link">Testimonials</a>
