--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:ital,wght@0,700;1,400&family=Raleway:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>ActiveBox</title>
   </head>
   <body>
@@ -34,7 +35,7 @@
               <a href="#works" class="navigation__menu-link">Works</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link">Our team</a>
+              <a href="#team" class="navigation__menu-link">Our team</a>
             </li>
             <li class="navigation__menu-item">
               <a href="#" class="navigation__menu-link">Testimonials</a>
@@ -331,6 +332,29 @@
       </div>
     </div>
     
+  </div>
+</section><section class="team" id="team">
+  <div class="container">
+    <div class="staff__table">
+      <div class="staff__card">
+        <div class="staff__picture">
+          <img src="../img/Team/Ruth Woods.png" alt="Picture of Ruth Woods" class="staff___picture-img">
+        </div>
+        <div class="staff__information">
+          <h2 class="staff__name">Ruth Woods</h2>
+          <h4 class="staff__position">Founder, CEO</h4>
+          <p class="staff__about">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+          <ul class="social-icons staff__social-icons">
+            <li class="social-icons-item staff__social-icons-item">
+              <a href="#" class="social-icon staff__social-icon"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="staff__card"></div>
+      <div class="staff__card"></div>
+      <div class="staff__card"></div>
+    </div>
   </div>
 </section>    </main>
     </div>
