ruth-card ready

--- a/#source/team.html
+++ b/#source/team.html
@@ -11,8 +11,10 @@
           <p class="staff__about">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
           <ul class="social-icons staff__social-icons">
             <li class="social-icons-item staff__social-icons-item">
-              <a href="#" class="social-icon staff__social-icon"></a>
+              <a href="#" class="social-icon staff__social-icon"><i class="fab fa-facebook-f"></i></a>
             </li>
+            <li class="social-icons-item staff__social-icons-item"><a href="#" class="social-icon staff__social-icon"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-icons-item staff__social-icons-item"><a href="#" class="social-icon staff__social-icon"><i class="fab fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
