some nav mistakes were fixed

--- a/#source/features.html
+++ b/#source/features.html
@@ -1,4 +1,4 @@
-<section class="features" id="Features">
+<section class="features" id="features">
   <div class="container">
     <div class="features__card-box">
       <div class="features__card">
