--- a/#source/masthead.html
+++ b/#source/masthead.html
@@ -22,7 +22,7 @@
               <a href="#team" class="navigation__menu-link">Our team</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link">Testimonials</a>
+              <a href="#clients" class="navigation__menu-link">Testimonials</a>
             </li>
             <li class="navigation__menu-item">
               <a href="#" class="navigation__menu-link"> Download</a>
