--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#team" class="navigation__menu-link">Our team</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link">Testimonials</a>
+              <a href="#clients" class="navigation__menu-link">Testimonials</a>
             </li>
             <li class="navigation__menu-item">
               <a href="#" class="navigation__menu-link"> Download</a>
@@ -79,7 +79,7 @@
   </div>
 </section>
     <main>
-<section class="features" id="Features">
+<section class="features" id="features">
   <div class="container">
     <div class="features__card-box">
       <div class="features__card">
@@ -483,7 +483,7 @@
     </div>
   </div>
 </section>
-    </main>
+<section class="clients" id="clients"></section>    </main>
     </div>
   </body>
 </html>
