start to create download

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:ital,wght@0,700;1,400&family=Raleway:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <title>ActiveBox</title>
   </head>
   <body>
@@ -78,7 +81,7 @@
     </div>
   </div>
 </section>
-    <main>
+      <main>
 <section class="features" id="features">
   <div class="container">
     <div class="features__card-box">
@@ -483,7 +486,22 @@
     </div>
   </div>
 </section>
-<section class="clients" id="clients"></section>    </main>
+<section class="clients" id="clients">
+  <div></div>
+</section><section class="download" id="download">
+  <div class="container">
+    <div class="download__content">
+      <h3 class="download__title">
+        Are You Ready to Start? Download Now For Free!
+      </h3>
+      <h4 class="download__subtitle">
+        Fusce dapibus, tellus ac cursus commodo
+      </h4>
+      <a href="#" class="button download__button">Download Here</a>
+    </div>
+  </div>
+</section>
+      </main>
     </div>
   </body>
 </html>
