--- a/#source/masthead.html
+++ b/#source/masthead.html
@@ -25,7 +25,7 @@
               <a href="#clients" class="navigation__menu-link">Testimonials</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link"> Download</a>
+              <a href="#download" class="navigation__menu-link"> Download</a>
             </li>
           </ul>
           <!-- Mobile-navigation -->
