--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a href="#clients" class="navigation__menu-link">Testimonials</a>
             </li>
             <li class="navigation__menu-item">
-              <a href="#" class="navigation__menu-link"> Download</a>
+              <a href="#download" class="navigation__menu-link"> Download</a>
             </li>
           </ul>
           <!-- Mobile-navigation -->
@@ -486,9 +486,8 @@
     </div>
   </div>
 </section>
-<section class="clients" id="clients">
-  <div></div>
-</section><section class="download" id="download">
+        @import "clients.html"
+<section class="download" id="download">
   <div class="container">
     <div class="download__content">
       <h3 class="download__title">
@@ -502,6 +501,63 @@
   </div>
 </section>
       </main>
+<footer class="footer" id="footer">
+  <section class="about">
+    <div class="container">
+      <div class="information-container">
+        <div class="location">
+          <h3 class="location__title">Location</h3>
+          <p class="location__info">
+            3481 Melrose Place Beverly Hills, CA 90210
+          </p>
+        </div>
+        <div class="social">
+          <h3 class="social__title">Share with Love</h3>
+          <ul class="social-icons footer__social-icons">
+            <li class="social-icons-item footer__social-icons-item">
+              <a href="#" class="social-icon footer__social-icon"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </li>
+            <li class="social-icons-item footer__social-icons-item">
+              <a href="#" class="social-icon footer__social-icon"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+            <li class="social-icons-item footer__social-icons-item">
+              <a href="#" class="social-icon footer__social-icon"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="about-activebox">
+          <h3 class="about-activebox__title">About ActiveBox</h3>
+          <p class="about-activebox__text">
+            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
+            ullamcorper nulla non metus auctor fringilla.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="copyright">
+    <div class="container">
+      <div class="copyright-container">
+        <p class="copyright__info">
+          Copyright © 2015 ActiveBox. All Rights Reserved
+        </p>
+        <p class="copyright__creator">
+          Made with <span class="copyright__heart"> Y </span>
+          <a href="#" class="copyright__creator-ownpage">by Kamal Chaneman</a>
+        </p>
+      </div>
+    </div>
+  </section>
+</footer>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+      <script src="/js/slick.min.js"></script>
+      <script src="/js/script.js"></script>
     </div>
   </body>
 </html>
