--- a/#source/clients.html
+++ b/#source/clients.html
@@ -1,3 +1,79 @@
 <section class="clients" id="clients">
-  <div></div>
+  <div class="clients__slider">
+    <div class="clients__slider-item">
+      <div class="testimonial">
+        <div class="clients__picture">
+          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+        </div>
+        <div class="testimonial__text">
+          <blockquote class="testimonial__text-text">
+            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+          </blockquote>
+          <p class="testimonial__text-client-name">
+            Susan Sims
+          </p>
+        </div>
+      </div>
+    </div>
+    div class="clients__slider-item">
+      <div class="testimonial">
+        <div class="clients__picture">
+          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+        </div>
+        <div class="testimonial__text">
+          <blockquote class="testimonial__text-text">
+            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+          </blockquote>
+          <p class="testimonial__text-client-name">
+            Susan Sims
+          </p>
+        </div>
+      </div>
+    </div>
+    div class="clients__slider-item">
+      <div class="testimonial">
+        <div class="clients__picture">
+          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+        </div>
+        <div class="testimonial__text">
+          <blockquote class="testimonial__text-text">
+            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+          </blockquote>
+          <p class="testimonial__text-client-name">
+            Susan Sims
+          </p>
+        </div>
+      </div>
+    </div>
+    div class="clients__slider-item">
+      <div class="testimonial">
+        <div class="clients__picture">
+          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+        </div>
+        <div class="testimonial__text">
+          <blockquote class="testimonial__text-text">
+            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+          </blockquote>
+          <p class="testimonial__text-client-name">
+            Susan Sims
+          </p>
+        </div>
+      </div>
+    </div>
+    div class="clients__slider-item">
+      <div class="testimonial">
+        <div class="clients__picture">
+          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+        </div>
+        <div class="testimonial__text">
+          <blockquote class="testimonial__text-text">
+            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+          </blockquote>
+          <p class="testimonial__text-client-name">
+            Susan Sims
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
