sliders skeleton is ready

--- a/#source/clients.html
+++ b/#source/clients.html
@@ -18,14 +18,14 @@
     div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+          <img src="/img/Clients/Clinton Francis Burton.jpg" alt="picture of Clinton Francis Burton" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+            “Lorem ipsum dolor sit amet consectetur adipisiur id rerum officia odit porro natus expedita, consequuntur officiis suscipit non blanditiis”
           </blockquote>
           <p class="testimonial__text-client-name">
-            Susan Sims
+            Clinton Francis Burton
           </p>
         </div>
       </div>
@@ -33,14 +33,14 @@
     div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+          <img src="/img/Clients/Maria Holl.jpg" alt="picture of Maria Holl" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+            “Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel minus magnam velit vero temporibus.”
           </blockquote>
           <p class="testimonial__text-client-name">
-            Susan Sims
+            Maria Holl
           </p>
         </div>
       </div>
@@ -48,14 +48,14 @@
     div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+          <img src="/img/Clients/Eric Selvin.jpg" alt="picture of Eric Selvin" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+            “Lorem ipsum dolor sit amet consectetur adipisicing elit. In, neque laboriosam.”
           </blockquote>
           <p class="testimonial__text-client-name">
-            Susan Sims
+            Eric Selvin
           </p>
         </div>
       </div>
@@ -63,14 +63,14 @@
     div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Susan Sims.png" alt="picture of Susan Sims" class="clients__picture-img">
+          <img src="/img/Clients/Tony Stars.jpg" alt="picture of Tony Stars" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
+            “Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo soluta ratione debitis sequi enim cum non ea..”
           </blockquote>
           <p class="testimonial__text-client-name">
-            Susan Sims
+            Tony Stars
           </p>
         </div>
       </div>
