--- a/#source/clients.html
+++ b/#source/clients.html
@@ -9,13 +9,13 @@
           <blockquote class="testimonial__text-text">
             “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
           </blockquote>
-          <p class="testimonial__text-client-name">
+          <h4 class="testimonial__text-client-name">
             Susan Sims
-          </p>
+          </h4>
         </div>
       </div>
     </div>
-    div class="clients__slider-item">
+    <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
           <img src="/img/Clients/Clinton Francis Burton.jpg" alt="picture of Clinton Francis Burton" class="clients__picture-img">
@@ -24,13 +24,13 @@
           <blockquote class="testimonial__text-text">
             “Lorem ipsum dolor sit amet consectetur adipisiur id rerum officia odit porro natus expedita, consequuntur officiis suscipit non blanditiis”
           </blockquote>
-          <p class="testimonial__text-client-name">
+          <h4 class="testimonial__text-client-name">
             Clinton Francis Burton
-          </p>
+          </h4>
         </div>
       </div>
     </div>
-    div class="clients__slider-item">
+    <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
           <img src="/img/Clients/Maria Holl.jpg" alt="picture of Maria Holl" class="clients__picture-img">
@@ -39,13 +39,13 @@
           <blockquote class="testimonial__text-text">
             “Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel minus magnam velit vero temporibus.”
           </blockquote>
-          <p class="testimonial__text-client-name">
+          <h4 class="testimonial__text-client-name">
             Maria Holl
-          </p>
+          </h4>
         </div>
       </div>
     </div>
-    div class="clients__slider-item">
+    <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
           <img src="/img/Clients/Eric Selvin.jpg" alt="picture of Eric Selvin" class="clients__picture-img">
@@ -54,13 +54,13 @@
           <blockquote class="testimonial__text-text">
             “Lorem ipsum dolor sit amet consectetur adipisicing elit. In, neque laboriosam.”
           </blockquote>
-          <p class="testimonial__text-client-name">
+          <h4 class="testimonial__text-client-name">
             Eric Selvin
-          </p>
+          </h4>
         </div>
       </div>
     </div>
-    div class="clients__slider-item">
+    <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
           <img src="/img/Clients/Tony Stars.jpg" alt="picture of Tony Stars" class="clients__picture-img">
@@ -69,9 +69,9 @@
           <blockquote class="testimonial__text-text">
             “Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo soluta ratione debitis sequi enim cum non ea..”
           </blockquote>
-          <p class="testimonial__text-client-name">
+          <h4 class="testimonial__text-client-name">
             Tony Stars
-          </p>
+          </h4>
         </div>
       </div>
     </div>
