slider is almost finished,but not still beauty

--- a/#source/clients.html
+++ b/#source/clients.html
@@ -10,7 +10,7 @@
             “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Susan Sims
+            Susan Sims, Interaction Designer at XYZ
           </h4>
         </div>
       </div>
@@ -18,14 +18,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Clinton Francis Burton.jpg" alt="picture of Clinton Francis Burton" class="clients__picture-img">
+          <img src="/img/Clients/Clinton Francis Barton.jpg" alt="picture of Clinton Francis Barton" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisiur id rerum officia odit porro natus expedita, consequuntur officiis suscipit non blanditiis”
+            "The City Is Flying, We’re Fighting An Army Of Robots, And I Have A Bow And Arrow. None Of This Makes Sense."
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Clinton Francis Burton
+            Clinton Francis Barton, The Hawkeye
           </h4>
         </div>
       </div>
@@ -33,14 +33,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Maria Holl.jpg" alt="picture of Maria Holl" class="clients__picture-img">
+          <img src="/img/Clients/Maria Hill.jpg" alt="picture of Maria Hill" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel minus magnam velit vero temporibus.”
+            “Time to start taking this all very seriously.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Maria Holl
+            Maria Hill, temporary director of a S.H.I.E.L.D.
           </h4>
         </div>
       </div>
@@ -48,14 +48,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Eric Selvin.jpg" alt="picture of Eric Selvin" class="clients__picture-img">
+          <img src="/img/Clients/Thor .jpg" alt="picture of Thor" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisicing elit. In, neque laboriosam.”
+            “I notice you've copied my beard.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Eric Selvin
+            Thor, The God of Thunder and Lightning
           </h4>
         </div>
       </div>
@@ -63,14 +63,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Tony Stars.jpg" alt="picture of Tony Stars" class="clients__picture-img">
+          <img src="/img/Clients/Tony Stark.jpg" alt="picture of Tony Stars" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo soluta ratione debitis sequi enim cum non ea..”
+            “Have You Ever Tried Shawarma… I Don’t Know What It Is, But I Wanna Try It.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Tony Stars
+            Tony Stark, Genius, Billionaire, Playboy, Philanthropist.
           </h4>
         </div>
       </div>
