--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <title>ActiveBox</title>
   </head>
@@ -499,7 +500,7 @@
             “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Susan Sims
+            Susan Sims, Interaction Designer at XYZ
           </h4>
         </div>
       </div>
@@ -507,14 +508,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Clinton Francis Burton.jpg" alt="picture of Clinton Francis Burton" class="clients__picture-img">
+          <img src="/img/Clients/Clinton Francis Barton.jpg" alt="picture of Clinton Francis Barton" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisiur id rerum officia odit porro natus expedita, consequuntur officiis suscipit non blanditiis”
+            "The City Is Flying, We’re Fighting An Army Of Robots, And I Have A Bow And Arrow. None Of This Makes Sense."
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Clinton Francis Burton
+            Clinton Francis Barton, The Hawkeye
           </h4>
         </div>
       </div>
@@ -522,14 +523,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Maria Holl.jpg" alt="picture of Maria Holl" class="clients__picture-img">
+          <img src="/img/Clients/Maria Hill.jpg" alt="picture of Maria Hill" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel minus magnam velit vero temporibus.”
+            “Time to start taking this all very seriously.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Maria Holl
+            Maria Hill, temporary director of a S.H.I.E.L.D.
           </h4>
         </div>
       </div>
@@ -537,14 +538,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Eric Selvin.jpg" alt="picture of Eric Selvin" class="clients__picture-img">
+          <img src="/img/Clients/Thor .jpg" alt="picture of Thor" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisicing elit. In, neque laboriosam.”
+            “I notice you've copied my beard.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Eric Selvin
+            Thor, The God of Thunder and Lightning
           </h4>
         </div>
       </div>
@@ -552,14 +553,14 @@
     <div class="clients__slider-item">
       <div class="testimonial">
         <div class="clients__picture">
-          <img src="/img/Clients/Tony Stars.jpg" alt="picture of Tony Stars" class="clients__picture-img">
+          <img src="/img/Clients/Tony Stark.jpg" alt="picture of Tony Stars" class="clients__picture-img">
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo soluta ratione debitis sequi enim cum non ea..”
+            “Have You Ever Tried Shawarma… I Don’t Know What It Is, But I Wanna Try It.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Tony Stars
+            Tony Stark, Genius, Billionaire, Playboy, Philanthropist.
           </h4>
         </div>
       </div>
@@ -635,7 +636,7 @@
 </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
       <script src="/js/script.js"></script>
-      <script src=""></script>
+      <script src="/slick-1.8.1/slick/slick.min.js"></script>
     </div>
   </body>
 </html>
