--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Time to start taking this all very seriously.”
+            “If I have something to answer for, I want to face it. If I can make good, I will. ”
           </blockquote>
           <h4 class="testimonial__text-client-name">
             Maria Hill, temporary director of a S.H.I.E.L.D.
@@ -688,7 +688,7 @@
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “I notice you've copied my beard.”
+            “I CHOOSE TO RUN TOWARD MY PROBLEMS AND NOT AWAY FROM THEM...”
           </blockquote>
           <h4 class="testimonial__text-client-name">
             Thor, The God of Thunder and Lightning
