--- a/#source/works.html
+++ b/#source/works.html
@@ -83,7 +83,7 @@
   </div>
 
 
-  <div class="project-sliders">
+  <div class="project__slider">
     <div class="project__picture">
       <img src="/img/Works/Back to school.png" alt="T-shirt, camera, notepad, flag etc."
       class="project__picture-img">
