start to make more adaptive version

--- a/#source/masthead.html
+++ b/#source/masthead.html
@@ -9,8 +9,8 @@
             class="logo__img"
           />
         </div>
+        <!-- Desktopnav -->
         <nav class="navigation">
-          <!-- Desktopnav -->
           <ul class="navigation__menu">
             <li class="navigation__menu-item">
               <a href="#features" class="navigation__menu-link"> Features</a>
@@ -28,22 +28,8 @@
               <a href="#download" class="navigation__menu-link"> Download</a>
             </li>
           </ul>
+
           <!-- Mobile-navigation -->
-          <!-- <nav class="nav-mobile">
-            <input class="checkmenu" id="menu__toggle" type="checkbox" />
-            <label for="menu__toggle" class="menu__btn">Menu </label>
-            <div class="burger-line first-line"></div>
-            <div class="burger-line second-line"></div>
-            <div class="burger-line third-line"></div>
-            <div class="burger-line fourth-line"></div>
-            <nav class="navmenu__box">
-              <a class="navmenu__item" href="#">Features</a>
-              <a class="navmenu__item" href="#">Works</a>
-              <a class="navmenu__item" href="#">Our team</a>
-              <a class="navmenu__item" href="#">Testimonials</a>
-              <a class="navmenu__item" href="#">Downloads</a>
-            </nav>
-          </nav> -->
         </nav>
       </div>
     </div>
@@ -51,8 +37,7 @@
   <div class="masthead-content">
     <div class="container">
       <h1 class="masthead__title">
-        Your Favorite One Page 
-        Multi Purpose Template
+        Your Favorite One Page Multi Purpose Template
       </h1>
       <h2 class="masthead__subtitle">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
