some adaptive for masthead and footer

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            "The City Is Flying, We’re Fighting An Army Of Robots, And I Have A Bow And Arrow. None Of This Makes Sense."
+            "The city is flying, we’re fighting an army of robots, and i have a bow and arrow. None of this makes sense."
           </blockquote>
           <h4 class="testimonial__text-client-name">
             Clinton Francis Barton, The Hawkeye
@@ -673,7 +673,7 @@
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “I CHOOSE TO RUN TOWARD MY PROBLEMS AND NOT AWAY FROM THEM...”
+            “I choose to run toward my problems and not away from them. That's what heroes do.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
             Thor, The God of Thunder and Lightning
@@ -688,7 +688,7 @@
         </div>
         <div class="testimonial__text">
           <blockquote class="testimonial__text-text">
-            “Have You Ever Tried Shawarma… I Don’t Know What It Is, But I Wanna Try It.”
+            “Have you ever tried shawarma? I don’t know what it is, but I wanna try it.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
             Tony Stark, Genius, Billionaire, Playboy, Philanthropist.
