--- a/#source/masthead.html
+++ b/#source/masthead.html
@@ -1,14 +1,14 @@
-<section class="masthead">
+<section class="masthead" id="masthead">
   <header class="header">
     <div class="container">
       <div class="header__container">
-        <div class="logo">
+        <a href="#masthead"><div class="logo">
           <img
             src="../img/Masthead/ActiveBox.png"
             alt="Logo"
             class="logo__img"
           />
-        </div>
+        </div></a>
         <!-- Desktopnav -->
         <nav class="navigation">
           <ul class="navigation__menu">
