--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
             “I choose to run toward my problems and not away from them. That's what heroes do.”
           </blockquote>
           <h4 class="testimonial__text-client-name">
-            Thor, The God of Thunder and Lightning
+            Thor, The God of Thunder and Lightning, "SnowWhite"
           </h4>
         </div>
       </div>
