burger menu is finaly stylized

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                     class="logo__img"
                   /></div
               ></a>
-              <!-- Desktopnav -->
+              
               <nav class="navigation">
+                <!-- Desktopnav -->
                 <ul class="navigation__menu">
                   <li class="navigation__menu-item">
                     <a href="#features" class="navigation__menu-link">
@@ -58,6 +59,32 @@
                 </ul>
 
                 <!-- Mobile-navigation -->
+                <div class="header__burger">
+                  <span></span>
+                </div>
+                <ul class="burger__menu">
+                  <li class="navigation__menu-item">
+                    <a href="#features" class="navigation__menu-link">
+                      Features</a
+                    >
+                  </li>
+                  <li class="navigation__menu-item">
+                    <a href="#works" class="navigation__menu-link">Works</a>
+                  </li>
+                  <li class="navigation__menu-item">
+                    <a href="#team" class="navigation__menu-link">Our team</a>
+                  </li>
+                  <li class="navigation__menu-item">
+                    <a href="#clients" class="navigation__menu-link"
+                      >Testimonials</a
+                    >
+                  </li>
+                  <li class="navigation__menu-item">
+                    <a href="#download" class="navigation__menu-link">
+                      Download</a
+                    >
+                  </li>
+                </ul>
               </nav>
             </div>
           </div>
@@ -716,8 +743,8 @@
                 </div>
                 <div class="testimonial__text">
                   <blockquote class="testimonial__text-text">
-                    "The city is flying, we’re fighting an army of robots,
-                    and i have a bow and arrow. None of this makes sense."
+                    "The city is flying, we’re fighting an army of robots, and i
+                    have a bow and arrow. None of this makes sense."
                   </blockquote>
                   <h4 class="testimonial__text-client-name">
                     Clinton Francis Barton, The Hawkeye
